Fixes
- Buttons will break into a new line if they don't fit in the container.
- Fixed the border color issue for tweets that don't allow responses.

--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@
     border-radius: 6px;
     display: inline-flex;
     flex-direction: row;
+    flex-wrap: wrap;
     margin-right: 10px;
     padding: 5px;
     text-decoration: none;
